--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & npx next-video sync -w",
     "build": "next build",
     "start": "next start",
     "test": "jest"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@mdxeditor/editor": "^2.16.0",
+    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -29,19 +30,23 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.0.13",
     "gray-matter": "^4.0.3",
+    "hls.js": "^1.5.15",
     "lucide-react": "^0.357.0",
     "next": "14.1.3",
     "next-mdx-remote": "^4.4.1",
     "next-remove-imports": "^1.0.12",
     "next-sanity": "^9.4.7",
     "next-themes": "^0.3.0",
+    "next-video": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "rehype-sanitize": "^6.0.0",
-    "sanity": "^3.56.0",
+    "sanity": "^3.40.0",
+    "sanity-plugin-mux-input": "^2.3.4",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
